Closed Bug 1068571 Opened 11 years ago Closed 11 years ago

Input touch events are not recognized properly in Music app

Categories

(Core :: Panning and Zooming, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla35
blocking-b2g 2.1+
Tracking Status
firefox33 --- wontfix
firefox34 --- fixed
firefox35 --- fixed
b2g-v1.4 --- affected
b2g-v2.0 --- affected
b2g-v2.1 --- verified
b2g-v2.2 --- verified

People

(Reporter: vasanth, Assigned: kats)

References

Details

(Whiteboard: [caf priority: p2][CR 723065])

Attachments

(4 files)

[Blocking Requested - why for this release]: [Blocking Requested - why for this release]: Blocking CAF FC release While music playback is going on randomly touch play/pause, next, previous icons. Sometimes input events are not recognized 100%. In those cases, playback doesn't change and icons keep highlighting. Able to reproduce with some effort. Repeatedly press the music app icons with 0.5-1 second delay. Once reproduced, next time it comes very easily. See attached video. I checked |adb shell getevent| shows proper events in failure cases, hence the issue could be in gecko. Note: Able to reproduce with offload and non offload audio playback
QA Wanted - Can we reproduce this on a 2.1 KK Flame build?
Keywords: qawanted
I've been able to reproduce this issue in Flame 2.1 KK. Attached screenshot of the Rewind button retaining a highlight even though the music is playing. Repro Rate: 5/25 Environmental Variables: Device: Flame Master BuildID: 20140917073957 Gaia: 47939f4c41d0c941e5047e5d1af74a79b7d8e0d5 Gecko: d7ad9b5167d8 Version: 34.0a2 (Master) Firmware Version: L1TC00011650 User Agent: Mozilla/5.0 (Mobile; rv:34.0) Gecko/34.0 Firefox/34.0
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(jmitchell)
Keywords: qawanted
QA Contact: croesch
The build info says master but it is not master that should have been removed. It's Flame 2.1.
Repro's in Flame - QA-Wanted for full branch check
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(jmitchell)
Keywords: qawanted
Component: General → Gaia::System::Input Mgmt
This bug repro's on Flame KK builds: Flame 2.2, Flame 2.1, Flame 2.0, Flame 1.4 OpenC 2.2 Actual Results: Able to get music buttons to remain highlighted when they should not. Repro Rate: 7/7 Environmental Variables: Device: Flame Master KK BuildID: 20140917212258 Gaia: d37950eb09e28aa18d0e01df9ff90574bd4337e0 Gecko: 426497473505 Version: 35.0a1 (Master) Firmware Version: L1TC00011650 User Agent: Mozilla/5.0 (Mobile; rv:35.0) Gecko/35.0 Firefox/35.0 ----------------------------------------------------------------- Environmental Variables: Device: Flame 2.1 KK BuildID: 20140918073020 Gaia: 379e68fe729a684fa2fcddb30ea1e65508db73e1 Gecko: 44eec4673c25 Version: 34.0a2 Firmware Version: L1TC00011650 User Agent: Mozilla/5.0 (Mobile; rv:34.0) Gecko/34.0 Firefox/34.0 ----------------------------------------------------------------- Environmental Variables: Device: Flame 2.0 KK BuildID: 20140918082321 Gaia: 31434a3949556171f3565ca47ac2b44e810e95e6 Gecko: 5cf783171d5c Version: 32.0 (2.0) Firmware Version: L1TC00011650 User Agent: Mozilla/5.0 (Mobile; rv:32.0) Gecko/32.0 Firefox/32.0 ----------------------------------------------------------------- Environmental Variables: Device: Flame 1.4 KK BuildID: 20140814202332 Gaia: 129211661489feb60bbd6772a44081d23b374f17 Gecko: Version: 30.0 (1.4) Firmware: v165 User Agent: Mozilla/5.0 (Mobile; rv:30.0) Gecko/30.0 Firefox/30.0 ----------------------------------------------------------------- Device: Open_C 2.2 BuildID: 20140917212258 Gaia: d37950eb09e28aa18d0e01df9ff90574bd4337e0 Gecko: 426497473505 Version: 35.0a1 (2.2) Firmware: P821A10v1.0.0B06_LOG_DL User Agent: Mozilla/5.0 (Mobile; rv:35.0) Gecko/35.0 Firefox/35.0
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(jmitchell)
Keywords: qawanted
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
Flags: needinfo?(jmitchell)
Whiteboard: [CR 723065] → [caf priority: p2][CR 723065]
Hi Vivien, can you help to take a look? This seems like a Gecko issue, thanks.
Flags: needinfo?(21)
This is not a input management bug. Input management is explicitly about management of input/keyboard app. Read the desc!
Component: Gaia::System::Input Mgmt → GonkIntegration
This seems like a APZ / Highlighting issue. This code use to lives into BrowserElementPanning.js, but has moved into the Gecko APZ side since a few monthes. Let's needinfo the people that knows this code :)
Flags: needinfo?(drs+bugzilla)
Flags: needinfo?(botond)
Flags: needinfo?(21)
I've been out of APZ for a while, so it's probably better for Botond to investigate this.
Flags: needinfo?(drs+bugzilla)
We have a number of issues with highlighting and :active elements. UX has yet to provide us with a spec as to how this is supposed to work with multitouch and various edge cases. See bug 1014322 and bug 1009684.
Blocks: 1014322
Depends on: 1009684
Flags: needinfo?(botond)
Triage group decided blocking+ due to commercialization requirement.
blocking-b2g: 2.1? → 2.1+
Component: GonkIntegration → Panning and Zooming
Product: Firefox OS → Core
Version: unspecified → Trunk
Based on the log I gathered I think what's going wrong here is that the last tap is disallowed in the code, presumably because the first tap (which included some move events) induced a velocity in the APZ, even though it wasn't actually pannable.
Attached patch PatchSplinter Review
The DiallowSingleTap code was getting erroneously triggered because of leftover velocity from the previous tap. Clearing it out fixes the issue.
Assignee: nobody → bugmail.mozilla
Attachment #8498319 - Flags: review?(botond)
This particular issue is a regression from bug 1039979 and should only affect 2.1 and up. There may be a different root cause in 2.0 and older versions. Since this bug is conveniently blocking-b2g: 2.1+ I can uplift the fix to 2.1 and ignore the older versions.
Blocks: 1039979
See Also: → 1067461
Attachment #8498319 - Flags: review?(botond) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Comment on attachment 8498319 [details] [diff] [review] Patch Approval Request Comment [Feature/regressing bug #]: unsure. the root cause on 2.0 and earlier is probably different than on 2.1+ since the code changed significantly in 2.1 [User impact if declined]: in some cases doing a tap on an item will not actually dispatch a click to the item, and will leave the item in a highlighted state. This generally happens on non-scrollable elements if the previous tap included some small velocity component [Describe test coverage new/current, TBPL]: local testing [Risks and why]: low-risk, affects APZ platforms (B2G/Metro) only. [String/UUID change made/needed]: none
Attachment #8498319 - Flags: approval-mozilla-aurora?
Blocks: 1067461
No longer blocks: 1067461
Comment on attachment 8498319 [details] [diff] [review] Patch Approving and requesting some QA verification/testing once this lands on 2.1
Attachment #8498319 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Keywords: verifyme
please verify this is fixed against master and 2.1 next build.
Flags: needinfo?(jmitchell)
Verified Fixed on Master and 2.1 actual results: Music app icons/buttons do not remain highlighted Environmental Variables: Device: Flame Master Build ID: 20141007130518 Gaia: 9050edcda308b65d86577c8ed0eedc5c568d8e44 Gecko: 0c8ae792f1c0 Version: 35.0a1 (Master) Firmware Version: V180 User Agent: Mozilla/5.0 (Mobile; rv:35.0) Gecko/35.0 Firefox/35.0 Device: Flame 2.1 Build ID: 20141007075118 Gaia: da328c6cbabf2cffc2d362e282cacc93325d1f43 Gecko: aebe54593d60 Version: 34.0a2 Firmware Version: V180 User Agent: Mozilla/5.0 (Mobile; rv:34.0) Gecko/34.0 Firefox/34.0
Status: RESOLVED → VERIFIED
Flags: needinfo?(jmitchell)
This issue was fixed for some days and now it is reproduced again with the below Gaia/Gecko sha1s gaia f5d4ff60ffed8961f7d0380ada9d0facfdfd56b1 gecko db7fce920e7d782d9f601384dc95924abcdaeeb8 COuld you please try the same STR in latest builds?
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Please file a new bug for the issue you are seeing with complete STR.
Status: REOPENED → RESOLVED
Closed: 11 years ago11 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Keywords: verifyme
QA Contact: croesch
No longer depends on: 1009684
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: