Bug 1068571 - Clear velocity on touch-end even if in the NOTHING state. r=botond